Wedding date fix
Had the wrong date in paragraph text

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 						<!-- Content -->
 							<article id="content">
 								<header>
-									<h2>Wedding Information</h2>
+									<h2>Wedding Information for Mike Trueman and Allie Hunwicks</h2>
 									<p>Saturday June 14th 2016</p>
 								</header>
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<p> Welcome Friends and Family to our Wedding Website!
-								On this site you can find all (if not too much) of the information you will need about our wedding day! Please check back frequently as we will be updating as more information becomes available. Do not hesitate to contact us if you have questions. We love you all and cannot wait to share February 21st 2015 with you!</p>
+								On this site you can find all (if not too much) of the information you will need about our wedding day! Please check back frequently as we will be updating as more information becomes available. Do not hesitate to contact us if you have questions. We love you all and cannot wait to share June 14th 2016 with you!</p>
 							</article>
 
 						<div class="row features">
