--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									</li>
 									<li><a href="ceremony.html">Ceremony</a></li>
 									<li class="break"><a href="hospitality.html">Hospitality</a></li>
-									<li><a href="no-sidebar.html">Registry</a></li>
+									<li><a href="registry.html">Registry</a></li>
 								</ul>
 							</nav>
 
@@ -51,7 +51,7 @@
 								</header>
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<p> Welcome Friends and Family to our Wedding Website!
-								On this site you can find all (if not too much) of the information you will need about our wedding day! Please check back frequently as we will be updating as more information becomes available. Do not hesitate to contact us if you have questions. We love you all and cannot wait to share June 14th 2016 with you!</p>
+								On this site you can find all of the information you will need about our wedding day! Please check back frequently as we will be updating as more information becomes available. Do not hesitate to contact us if you have questions. We love you all and cannot wait to share June 14th 2016 with you!</p>
 							</article>
 
 						<div class="row features">
@@ -101,7 +101,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="menu">
-							<li>&copy; Chris Davies. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Chris Davies. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a> and Chris Davies</li>
 						</ul>
 					</div>
 				</div>
