--- a/ceremony.html
+++ b/ceremony.html
@@ -50,7 +50,7 @@
 									<p>Everything you need to know</p>
 								</header>
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<p>Information coming soon</p>
+								<p>Join us to celebrate the marriage of Michael Trueman and Allison Hunwicks. Information coming soon</p>
 								
 							</article>
 
@@ -64,7 +64,7 @@
 								</header>
 								<p>Hold on, we're going home</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Take Me There</a></li>
+									<li><a href="index.html" class="button">Take Me There</a></li>
 								</ul>
 							</section>
 							<section class="4u 12u(narrower) feature">
@@ -76,7 +76,7 @@
 								</header>
 								<p>Hotels, Transit, Cabs and General Transportation</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Take Me There</a></li>
+									<li><a href="hospitality.html" class="button">Take Me There</a></li>
 								</ul>
 							</section>
 							<section class="4u 12u(narrower) feature">
@@ -88,7 +88,7 @@
 								</header>
 								<p>Gimme Gimme Gimme</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Take Me There</a></li>
+									<li><a href="registry.html" class="button">Take Me There</a></li>
 								</ul>
 							</section>
 						</div>
