--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- Content -->
 							<article id="content">
 								<header>
-									<h2>Wedding Information for Mike Trueman and Allie Hunwicks</h2>
+									<h2>Mike Trueman and Allie Hunwicks are getting married</h2>
 									<p>Saturday June 14th 2016</p>
 								</header>
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
@@ -64,7 +64,7 @@
 								</header>
 								<p>Where we will be and thus you need to be</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Take Me There</a></li>
+									<li><a href="ceremony.html" class="button">Take Me There</a></li>
 								</ul>
 							</section>
 							<section class="4u 12u(narrower) feature">
@@ -76,7 +76,7 @@
 								</header>
 								<p>Treat Yo Self</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Take Me There</a></li>
+									<li><a href="registry.html" class="button">Take Me There</a></li>
 								</ul>
 							</section>
 							<section class="4u 12u(narrower) feature">
@@ -88,7 +88,7 @@
 								</header>
 								<p>Hotels, Transit, Cabs and General transportation</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Take Me There</a></li>
+									<li><a href="hospitality.html" class="button">Take Me There</a></li>
 								</ul>
 							</section>
 						</div>
