Main image change
added save the date image, fixed registries text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									</li>
 									<li><a href="ceremony.html">Ceremony</a></li>
 									<li class="break"><a href="hospitality.html">Hospitality</a></li>
-									<li><a href="registry.html">Registry</a></li>
+									<li><a href="registry.html">Registries</a></li>
 								</ul>
 							</nav>
 
@@ -47,11 +47,11 @@
 							<article id="content">
 								<header>
 									<h2>Mike Trueman and Allie Hunwicks are getting married</h2>
-									<p>Saturday June 14th 2016</p>
+									<p>Saturday June 4th 2016</p>
 								</header>
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/savedate.png" alt="" /></a>
 								<p> Welcome Friends and Family to our Wedding Website!
-								On this site you can find all of the information you will need about our wedding day! Please check back frequently as we will be updating as more information becomes available. Do not hesitate to contact us if you have questions. We love you all and cannot wait to share June 14th 2016 with you!</p>
+								On this site you can find all of the information you will need about our wedding day! Please check back frequently as we will be updating as more information becomes available. Do not hesitate to contact us if you have questions. We love you all and cannot wait to share June 4th 2016 with you!</p>
 							</article>
 
 						<div class="row features">
