--- a/ceremony.html
+++ b/ceremony.html
@@ -51,6 +51,24 @@
 								</header>
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<p>Join us to celebrate the marriage of Michael Trueman and Allison Hunwicks. Information coming soon</p>
+								<p>Ceremony - Begins at 330pm
+								<address>
+								St James Catholic Church<br/>
+								728 Annette Street<br/>
+								Toronto, Ontario<br/>
+								M6S2E2<br/>
+								
+								</address>
+								</p>
+								<p>Reception - Cocktails at 530pm
+								<address>
+								Markland Wood Golf Club<br/>
+								245 Markland Drive<br/>
+								Toronto, Ontario<br/>
+								M9C1R1<br/>
+
+								</address>
+								</p>
 								
 							</article>
 
@@ -86,7 +104,15 @@
 								<header>
 									<h3>Registries</h3>
 								</header>
-								<p>Gimme Gimme Gimme</p>
+								<p>
+								Cause I got a really big team
+								And they need some really big rings
+								They need some really nice things
+								Better be comin' with no strings
+								Better be comin' with no strings
+								We need some really nice things
+								We need some really big rings
+								</p>
 								<ul class="actions">
 									<li><a href="registry.html" class="button">Take Me There</a></li>
 								</ul>
