google map link placeholder
remember to put these in soon

--- a/ceremony.html
+++ b/ceremony.html
@@ -57,7 +57,7 @@
 								728 Annette Street<br/>
 								Toronto, Ontario<br/>
 								M6S2E2<br/>
-								
+								Google Map Links Coming Soon
 								</address>
 								</p>
 								<p>Reception - Cocktails at 530pm
@@ -66,7 +66,7 @@
 								245 Markland Drive<br/>
 								Toronto, Ontario<br/>
 								M9C1R1<br/>
-
+								Google Map Links Coming Soon
 								</address>
 								</p>
 								
