Google Map Links
Added google map iframes for ceremony and reception locations

--- a/ceremony.html
+++ b/ceremony.html
@@ -57,8 +57,9 @@
 								728 Annette Street<br/>
 								Toronto, Ontario<br/>
 								M6S2E2<br/>
-								Google Map Links Coming Soon
-								</address>
+								<a href="https://goo.gl/maps/beUj2rrwVro">Google Map Link</a><br/>
+								</address><br />
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.48456798034!2d-79.48851768450211!3d43.65889107912104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3691e270ff03%3A0xc5c85c643396299b!2s728+Annette+St%2C+Toronto%2C+ON+M6S+2E2!5e0!3m2!1sen!2sca!4v1445478559746" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 								</p>
 								<p>Reception - Cocktails at 530pm
 								<address>
@@ -66,8 +67,9 @@
 								245 Markland Drive<br/>
 								Toronto, Ontario<br/>
 								M9C1R1<br/>
-								Google Map Links Coming Soon
-								</address>
+								<a href="https://goo.gl/maps/dbi5TfZjeLK2">Google Map Link</a>
+								</address><br/>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.902132181105!2d-79.58204508426705!3d43.629395861987206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xb27b6b5fa793df16!2sMarkland+Wood+Golf+Club!5e0!3m2!1sen!2sca!4v1445478839005" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 								</p>
 								
 							</article>
