Added new pictures to pages

--- a/hospitality.html
+++ b/hospitality.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
 	</head>
 	<body class="no-sidebar">
 		<div id="page-wrapper">
@@ -47,7 +48,7 @@
 									<h2>Hospitality</h2>
 									<p>Hotels, Transit, Cabs and General Transportation Information</p>
 								</header>
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
 								<p>Hotel information coming soon</p>
 								<p>Transit information coming soon</p>
 								<p>Cabs information coming soon</p>
@@ -57,7 +58,7 @@
 						<div class="row features">
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper first">
-									<a href="index.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="index.html" class="image featured"><img src="images/home.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Home</h3>
@@ -69,7 +70,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="ceremony.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="ceremony.html" class="image featured"><img src="images/ceremony.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Ceremony</h3>
@@ -81,7 +82,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="registry.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="registry.html" class="image featured"><img src="images/registry.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Registries</h3>
