--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<div class="row features">
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper first">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="ceremony.html" class="image featured"><img src="images/ceremony.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Ceremony and Reception Information</h3>
@@ -70,7 +70,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="registry.html" class="image featured"><img src="images/registry.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Registry</h3>
@@ -82,7 +82,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Hospitality</h3>
