--- a/registry.html
+++ b/registry.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
 	</head>
 	<body class="no-sidebar">
 		<div id="page-wrapper">
@@ -49,7 +50,7 @@
 									<h2>Registries</h2>
 									<p>Best Day Of The Year</p>
 								</header>
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="registry.html" class="image featured"><img src="images/registry.jpg" alt="" /></a>
 								<p>Registry 1</p>
 								<p>Registry 2</p>
 								<p>Registry 3</p>
@@ -58,7 +59,7 @@
 						<div class="row features">
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper first">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="index.html" class="image featured"><img src="images/home.jpg" alt="Go Home" /></a>
 								</div>
 								<header>
 									<h3>Home</h3>
@@ -73,7 +74,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="ceremony.html" class="image featured"><img src="images/ceremony.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Ceremony</h3>
@@ -81,19 +82,19 @@
 								<p>I hope one day we get married just to say we fuckin' did it. 
 								And girl I'm fuckin' serious I'm with it if you with it</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Take Me There</a></li>
+									<li><a href="ceremony.html" class="button">Take Me There</a></li>
 								</ul>
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Hospitality</h3>
 								</header>
 								<p>Where to go and where to stay</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Take Me There</a></li>
+									<li><a href="hospitality.html" class="button">Take Me There</a></li>
 								</ul>
 							</section>
 						</div>
