--- a/ceremony.html
+++ b/ceremony.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
 	</head>
 	<body class="no-sidebar">
 		<div id="page-wrapper">
@@ -49,7 +50,7 @@
 									<h2>Ceremony and Reception Information</h2>
 									<p>Everything you need to know</p>
 								</header>
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/ceremony.jpg" alt="" /></a>
 								<p>Join us to celebrate the marriage of Michael Trueman and Allison Hunwicks. Information coming soon</p>
 								<p>Ceremony - Begins at 330pm
 								<address>
@@ -77,7 +78,7 @@
 						<div class="row features">
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper first">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="index.html" class="image featured"><img src="images/home.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Home</h3>
@@ -89,7 +90,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Hospitality</h3>
@@ -101,7 +102,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="registry.html" class="image featured"><img src="images/registry.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Registries</h3>
