removed drake lyrics

--- a/ceremony.html
+++ b/ceremony.html
@@ -108,13 +108,7 @@
 									<h3>Registries</h3>
 								</header>
 								<p>
-								Cause I got a really big team
-								And they need some really big rings
-								They need some really nice things
-								Better be comin' with no strings
-								Better be comin' with no strings
-								We need some really nice things
-								We need some really big rings
+								Gifts
 								</p>
 								<ul class="actions">
 									<li><a href="registry.html" class="button">Take Me There</a></li>
