--- a/registry.html
+++ b/registry.html
@@ -65,9 +65,7 @@
 									<h3>Home</h3>
 								</header>
 								<p>Just hold on, we're going home
-									Just hold on, we're going home
-									It's hard to do these things alone
-									Just hold on, we're going home</p>
+									</p>
 								<ul class="actions">
 									<li><a href="#" class="button">Take Me There</a></li>
 								</ul>
@@ -79,8 +77,7 @@
 								<header>
 									<h3>Ceremony</h3>
 								</header>
-								<p>I hope one day we get married just to say we fuckin' did it. 
-								And girl I'm fuckin' serious I'm with it if you with it</p>
+								<p>Dates, times and locations</p>
 								<ul class="actions">
 									<li><a href="ceremony.html" class="button">Take Me There</a></li>
 								</ul>
