CSS Font Changes
Changed header font to dr crabfred

--- a/ceremony.html
+++ b/ceremony.html
@@ -33,7 +33,7 @@
 									</li>
 									<li><a href="ceremony.html">Ceremony</a></li>
 									<li class="break"><a href="hospitality.html">Hospitality</a></li>
-									<li><a href="registry.html">Registry</a></li>
+									<li><a href="registry.html">Registries</a></li>
 								</ul>
 							</nav>
 
