--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<!-- Content -->
 							<article id="content">
 								<header>
-									<h2>Mike Trueman and Allie Hunwicks are getting married</h2>
+									<h2>Mike Trueman and Allie Hunwicks are getting married!</h2>
 									<p>Saturday June 4th 2016</p>
 								</header>
 								<a href="#" class="image featured"><img src="images/savedate.png" alt="" /></a>
