--- a/hospitality.html
+++ b/hospitality.html
@@ -49,10 +49,13 @@
 									<p>Hotels, Transit, Cabs and General Transportation Information</p>
 								</header>
 								<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
-								<p>Hotel information coming soon</p>
-								<p>Transit information coming soon</p>
-								<p>Cabs information coming soon</p>
-								<p>General Transport</p>
+								<h3>Trueman Hunwicks Wedding</h3>
+								<address>Hampton Inn<br /> 
+								5515 Eglinton Avenue West,<br />
+								Toronto, Ontario<br />
+								M9C 5K5
+								</address>
+								
 							</article>
 
 						<div class="row features">
