Font and Text Changes
Changed the font for h2 and other related info

--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
 						<!-- Content -->
 							<article id="content">
 								<header>
-									<h2>Mike Trueman and Allie Hunwicks are getting married!</h2>
-									<p>Saturday June 4th 2016</p>
+									<h2>Mike and Allie</h2>
+									<p>June 4th 2016</p>
 								</header>
 								<a href="#" class="image featured"><img src="images/savedate.png" alt="" /></a>
-								<p> Welcome Friends and Family to our Wedding Website!
-								On this site you can find all of the information you will need about our wedding day! Please check back frequently as we will be updating as more information becomes available. Do not hesitate to contact us if you have questions. We love you all and cannot wait to share June 4th 2016 with you!</p>
+								<p> Welcome to our Wedding Site! Contact us at 
+								<a href="mailto:&#109;&#105;&#107;&#101;&#097;&#108;&#108;&#105;&#101;&#050;&#048;&#049;&#054;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#109;&#105;&#107;&#101;&#097;&#108;&#108;&#105;&#101;&#050;&#048;&#049;&#054;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;
+								</a> and check back often for more info!</p>
 							</article>
 
 						<div class="row features">
