--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 					<div id="copyright" class="container">
 						<ul class="menu">
 							<li>&copy; Chris Davies. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a> and Chris Davies</li>
+							<li>Illustration &copy; <a href="http://www.terranmcneely.com/">Terran McNeely</a> 2016</li>
 						</ul>
 					</div>
 				</div>
