--- a/hospitality.html
+++ b/hospitality.html
@@ -55,7 +55,9 @@
 								Toronto, Ontario<br />
 								M9C 5K5
 								</address>
-								
+								<br />
+								<a href="http://hamptoninn3.hilton.com/en/hotels/ontario/hampton-inn-by-hilton-toronto-airport-corporate-centre-YTOSOHX/index.html" title="Hotel Website">Hotel Website
+								</a>
 							</article>
 
 						<div class="row features">
