--- a/ceremony.html
+++ b/ceremony.html
@@ -50,7 +50,8 @@
 									<h2>Ceremony and Reception Information</h2>
 									<p>Everything you need to know</p>
 								</header>
-								<a href="#" class="image featured"><img src="images/ceremony.jpg" alt="" /></a>
+								<a href="#" class="image featuredmain"><img src="images/ceremonysmall.jpg" alt="" /></a>
+								<br />
 								<p>Join us to celebrate the marriage of Michael Trueman and Allison Hunwicks. Information coming soon</p>
 								<p>Ceremony - Begins at 3pm
 								<address>
@@ -90,7 +91,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
+									<a href="hospitality.html" class="image featured"><img src="images/hospitalityhalfcopy.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Hospitality</h3>
@@ -102,7 +103,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="registry.html" class="image featured"><img src="images/registry.jpg" alt="" /></a>
+									<a href="registry.html" class="image featured"><img src="images/registrysmall.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Registries</h3>
