--- a/hospitality.html
+++ b/hospitality.html
@@ -48,7 +48,7 @@
 									<h2>Hospitality</h2>
 									<p>Hotels, Transit, Cabs and General Transportation Information</p>
 								</header>
-								<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
+								<a href="hospitality.html" class="image featuredmain"><img src="images/hospitalityhalfcopy.jpg" alt="" /></a>
 								<h3>Trueman Hunwicks Wedding</h3>
 								<address>Hampton Inn<br /> 
 								5515 Eglinton Avenue West,<br />
@@ -75,7 +75,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="ceremony.html" class="image featured"><img src="images/ceremony.jpg" alt="" /></a>
+									<a href="ceremony.html" class="image featured"><img src="images/ceremonysmall.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Ceremony</h3>
@@ -87,7 +87,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="registry.html" class="image featured"><img src="images/registry.jpg" alt="" /></a>
+									<a href="registry.html" class="image featured"><img src="images/registrysmall.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Registries</h3>
