--- a/index.html
+++ b/index.html
@@ -43,23 +43,34 @@
 			<!-- Main -->
 				<div class="wrapper">
 					<div class="container" id="main">
-
+								<script type="text/javascript"
+								src="http://app.rsvpify.com/embed/38041"></script><script
+								type="text/javascript"
+								src="http://app.rsvpify.com/js/iframeResizer.min.js"></script><script
+								type="text/javascript">iFrameResize({autoResize:
+								true,heightCalculationMethod: 'max',enablePublicMethods: true},
+								"#RSVPifyIFrame");</script>
 						<!-- Content -->
 							<article id="content">
 								<header>
 									<h2>Mike and Allie</h2>
 									<p>June 4th 2016</p>
 								</header>
-								<a href="#" class="image featured"><img src="images/savedate.png" alt="" /></a>
-								<p> Welcome to our Wedding Site! Contact us at 
+								<a href="#" class="image featuredmain"><img src="images/savedatesmall.png" alt="" /></a>
+								<br />
+								<p>
+								
+								</p>
+								<p>Contact us at 
 								<a href="mailto:&#109;&#105;&#107;&#101;&#097;&#108;&#108;&#105;&#101;&#050;&#048;&#049;&#054;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#109;&#105;&#107;&#101;&#097;&#108;&#108;&#105;&#101;&#050;&#048;&#049;&#054;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;
-								</a> and check back often for more info!</p>
+								</a>
+								</p>
 							</article>
 
 						<div class="row features">
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper first">
-									<a href="ceremony.html" class="image featured"><img src="images/ceremony.jpg" alt="" /></a>
+									<a href="ceremony.html" class="image featured"><img src="images/ceremonysmall.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Ceremony and Reception Information</h3>
@@ -71,7 +82,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="registry.html" class="image featured"><img src="images/registry.jpg" alt="" /></a>
+									<a href="registry.html" class="image featured"><img src="images/registrysmall.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Registry</h3>
@@ -83,7 +94,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
+									<a href="hospitality.html" class="image featured"><img src="images/hospitalityhalfcopy.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Hospitality</h3>
