--- a/registry.html
+++ b/registry.html
@@ -50,8 +50,13 @@
 									<h2>Registries</h2>
 									<p>Best Day Of The Year</p>
 								</header>
-								<a href="registry.html" class="image featured"><img src="images/registry.jpg" alt="" /></a>
-								<p>Registry 1</p>
+								<a href="registry.html" class="image featuredmain"><img src="images/registrysmall.jpg" alt="" /></a>
+								<br />
+								<p>
+								<a href=http://www.crateandbarrel.ca/Gift-Registry/Guest/View-Registry/5470923">
+								Crate And Barrell Registry
+								</a>
+								</p>
 								<p>Registry 2</p>
 								<p>Registry 3</p>
 							</article>
@@ -72,7 +77,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="ceremony.html" class="image featured"><img src="images/ceremony.jpg" alt="" /></a>
+									<a href="ceremony.html" class="image featured"><img src="images/ceremonysmall.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Ceremony</h3>
@@ -84,7 +89,7 @@
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
-									<a href="hospitality.html" class="image featured"><img src="images/hospitality.jpg" alt="" /></a>
+									<a href="hospitality.html" class="image featured"><img src="images/hospitalityhalfcopy.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Hospitality</h3>
