--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
 			<!-- Main -->
 				<div class="wrapper">
 					<div class="container" id="main">
-								<script type="text/javascript"
-								src="http://app.rsvpify.com/embed/38041"></script><script
-								type="text/javascript"
-								src="http://app.rsvpify.com/js/iframeResizer.min.js"></script><script
-								type="text/javascript">iFrameResize({autoResize:
-								true,heightCalculationMethod: 'max',enablePublicMethods: true},
-								"#RSVPifyIFrame");</script>
-						<!-- Content -->
+							<!-- Content -->
 							<article id="content">
 								<header>
-									<h2>Mike and Allie</h2>
-									<p>June 4th 2016</p>
+									<h2>Mike and Allie - June 4th 2016</h2>
 								</header>
+								<!--
 								<a href="#" class="image featuredmain"><img src="images/savedatesmall.png" alt="" /></a>
+								-->
+								<div class="image-wrapper">
+								<img class="image featuredmain" src="images/rsvpwhite.png" />
+								<img class="image featuredmain" src="images/ceremony.png" />
+								<img class="image featuredmain" src="images/hospitality.png" />
+								<img class="image featuredmain" src="images/registries.png" />
+								</div>
 								<br />
 								<p>
 								
