--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<nav id="nav">
 								<ul>
 									<li>
-										<a href="index.html">Home</a>
+										<a href="rsvp.html">RSVP</a>
 									</li>
 									<li><a href="ceremony.html">Ceremony</a></li>
 									<li class="break"><a href="hospitality.html">Hospitality</a></li>
@@ -46,17 +46,25 @@
 							<!-- Content -->
 							<article id="content">
 								<header>
-									<h2>Mike and Allie - June 4th 2016</h2>
+									<h2>Mike and Allie</h2>
+									<h2>June 4th 2016</h2>
 								</header>
 								<!--
 								<a href="#" class="image featuredmain"><img src="images/savedatesmall.png" alt="" /></a>
 								-->
-								<div class="image-wrapper">
-								<img class="image featuredmain" src="images/rsvpwhite.png" />
-								<img class="image featuredmain" src="images/ceremony.png" />
-								<img class="image featuredmain" src="images/hospitality.png" />
-								<img class="image featuredmain" src="images/registries.png" />
-								</div>
+								<br />
+								<a href="rsvp.html">
+								<img class="image noborder" src="images/smallerrsvp.png" />
+								</a>
+								<a href="ceremony.html">
+								<img class="image noborder" src="images/smallerceremony.png" />
+								</a>
+								<a href="hospitality.html">
+								<img class="image noborder" src="images/smallerhospitality.png" />
+								</a>
+								<a href="registry.html">
+								<img class="image noborder" src="images/smallerregistry.png" />
+								</a>
 								<br />
 								<p>
 								
@@ -67,58 +75,15 @@
 								</p>
 							</article>
 
-						<div class="row features">
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper first">
-									<a href="ceremony.html" class="image featured"><img src="images/ceremonysmall.jpg" alt="" /></a>
-								</div>
-								<header>
-									<h3>Ceremony and Reception Information</h3>
-								</header>
-								<p>Where we will be and thus you need to be</p>
-								<ul class="actions">
-									<li><a href="ceremony.html" class="button">Take Me There</a></li>
-								</ul>
-							</section>
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper">
-									<a href="registry.html" class="image featured"><img src="images/registrysmall.jpg" alt="" /></a>
-								</div>
-								<header>
-									<h3>Registry</h3>
-								</header>
-								<p>Treat Yo Self</p>
-								<ul class="actions">
-									<li><a href="registry.html" class="button">Take Me There</a></li>
-								</ul>
-							</section>
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper">
-									<a href="hospitality.html" class="image featured"><img src="images/hospitalityhalfcopy.jpg" alt="" /></a>
-								</div>
-								<header>
-									<h3>Hospitality</h3>
-								</header>
-								<p>Hotels, Transit, Cabs and General transportation</p>
-								<ul class="actions">
-									<li><a href="hospitality.html" class="button">Take Me There</a></li>
-								</ul>
-							</section>
-						</div>
-					</div>
-				</div>
-
 			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div id="footer" class="container">
-					</div>
+				<!--<div id="footer-wrapper"> -->
 					<div id="copyright" class="container">
 						<ul class="menu">
 							<li>&copy; Chris Davies. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a> and Chris Davies</li>
 							<li>Illustration &copy; <a href="http://www.terranmcneely.com/">Terran McNeely</a> 2016</li>
 						</ul>
 					</div>
-				</div>
+				<!--</div> -->
 
 		</div>
 
