--- a/index.html
+++ b/index.html
@@ -69,24 +69,23 @@
 								<p>
 								
 								</p>
+								<br />
 								<p>Contact us at 
 								<a href="mailto:&#109;&#105;&#107;&#101;&#097;&#108;&#108;&#105;&#101;&#050;&#048;&#049;&#054;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#109;&#105;&#107;&#101;&#097;&#108;&#108;&#105;&#101;&#050;&#048;&#049;&#054;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;
 								</a>
 								</p>
 							</article>
-
+						</div>
+					</div>
 			<!-- Footer -->
-				<!--<div id="footer-wrapper"> -->
+				
 					<div id="copyright" class="container">
 						<ul class="menu">
 							<li>&copy; Chris Davies. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a> and Chris Davies</li>
 							<li>Illustration &copy; <a href="http://www.terranmcneely.com/">Terran McNeely</a> 2016</li>
 						</ul>
 					</div>
-				<!--</div> -->
-
 		</div>
-
 		<!-- Scripts -->
 
 			<script src="assets/js/jquery.min.js"></script>
