RSVP link correction

--- a/registry.html
+++ b/registry.html
@@ -29,7 +29,7 @@
 							<nav id="nav">
 								<ul>
 									<li>
-										<a href="index.html">Home</a>
+										<a href="rsvp.html">RSVP</a>
 									</li>
 									<li><a href="ceremony.html">Ceremony</a></li>
 									<li class="break"><a href="hospitality.html">Hospitality</a></li>
@@ -54,7 +54,7 @@
 								<br />
 								<p>
 								<a href=http://www.crateandbarrel.ca/Gift-Registry/Guest/View-Registry/5470923">
-								Crate And Barrell Registry
+								Crate And Barrel Registry
 								</a>
 								</p>
 								<p>Registry 2</p>
