--- a/hospitality.html
+++ b/hospitality.html
@@ -28,7 +28,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="index.html">Home</a></li>
+									<li><a href="rsvp.html">RSVP</a></li>
 									<li><a href="ceremony.html">Ceremony</a></li>
 									<li class="break"><a href="hospitality.html">Hospitality</a></li>
 									<li><a href="registry.html">Registries</a></li>
