--- a/rsvp.html
+++ b/rsvp.html
@@ -29,7 +29,7 @@
 							<nav id="nav">
 								<ul>
 									<li>
-										<a href="index.html">Home</a>
+										<a href="rsvp.html">RSVP</a>
 									</li>
 									<li><a href="ceremony.html">Ceremony</a></li>
 									<li class="break"><a href="hospitality.html">Hospitality</a></li>
